src/Hierarchie/src/optim/norm_shape_computer.hpp


#include <vector>

double norm_cpp(double* arr);
void norm_cpp_array(double * inp, double* out, const int& nbpt);
int is_cpp( const double& d1, const double& d2);

void n_cpp(double * inp, double* out);
std::vector<double> n_x_cpp(double * inp_n );
void x_cpp(double * inp_n, double * inp_mesh, double* out);